Always use a popup for board visibility
This also gives an example of how to use the same popup in different
context; here the interest is only on mobile, to have a little more
space to choose between public and private that if it is enclosed in
the first popup.

--- a/client/components/boards/boardHeader.css
+++ b/client/components/boards/boardHeader.css
@@ -109,3 +109,11 @@ body.mobile-mode {
   gap: 2ch;
   padding: 0 0.5ch;
 }
+
+.create-element-foooter {
+  &, > * {
+    display: flex;
+    align-items: center;
+    gap: 1ch;
+  }
+}
