--- a/client/components/main/layouts.css
+++ b/client/components/main/layouts.css
@@ -197,6 +197,18 @@ but it worth it to let browsers take care of exact placement/sizing */
   display: block;
   float: right;
 }
+p.quiet:not:has(span) {
+  &, >:is(p, a) {
+    /* we need to compensate the fact that most of
+    flex stack in vertical. another option would be to
+    create container for eac geh view, but this may work
+    in general case */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.3ch;
+  }
+}
 .quiet,
 .quiet a {
   color: #8c8c8c;
@@ -249,9 +261,6 @@ p a {
   overflow-wrap: break-word;
 }
 table,
-p {
-  margin-bottom: 1vh;
-}
 pre {
   margin: 2vh 0;
   white-space: pre;
