--- a/client/components/swimlanes/swimlanes.jade
+++ b/client/components/swimlanes/swimlanes.jade
@@ -7,32 +7,34 @@ template(name="swimlane")
         if isMiniScreen
           if currentListIsInThisSwimlane _id
             +list(currentList)
-          unless currentList
-            if currentUser.isBoardMember
-              unless currentUser.isCommentOnly
-                +addListForm
           each lists
             with(this)
               unless currentList
                 +miniList(this)
-          if currentCardIsInThisList _id ../_id
-            +cardDetails(currentCard)
+        else
+          each lists
+            if visible this
+              +list(this)
       //- allow resizing in mobile mode
       .swimlane-resize-handle.js-swimlane-resize-handle.nodragscroll
+      if currentUser.isBoardMember
+        unless currentUser.isCommentOnly
+          +addListForm
 
 template(name="listsGroup")
   .swimlane.list-group.js-lists.dragscroll
     if isMiniScreen
       each lists
         +miniList(this)
-      if currentUser.isBoardMember
-        unless currentUser.isCommentOnly
-          +addListForm
     else
       each lists
         if visible this
           +list(this)
     .swimlane-resize-handle.js-swimlane-resize-handle.nodragscroll
+    //- Placed with grids
+    if currentUser.isBoardMember
+      unless currentUser.isCommentOnly
+        +addListForm
 
 template(name="addListForm")
   unless currentUser.isWorker
@@ -59,8 +61,10 @@ template(name="addListForm")
                         | {{_ 'or'}}
                         a.js-list-template {{_ 'template'}}
               else
-                a.open-list-composer.list-header.js-open-inlined-form(title="{{_ 'add-list'}}")
+                a.open-list-composer.list-header.js-open-add-card-popup(title="{{_ 'add-list'}}")
                   i.fa.fa-plus
+                unless isMiniScreen
+                  | {{_ 'add-list'}}
 
 template(name="moveSwimlanePopup")
   if currentUser
