Use fluid typography for some elements
Follow-up of 4ebf40a7b2f89b68a4b1a80d42c4374a8d566f6e; ⚠️ not adapted for mobile yet, threshold is too low (22px@400w) and should come at probably 800w. I'll focus on mobile at the end.

--- a/client/components/boards/boardHeader.css
+++ b/client/components/boards/boardHeader.css
@@ -83,12 +83,10 @@ body {
   flex-wrap: no-wrap;
 }
 body.mobile-mode {
-  header-board-menu h1 {
-    font-size: 2em;
+  .header-board-menu {
+    font-size: var(--step-1);
   }
   .board-header-btn {
-    /* avoid wrapping if possible, at the cost of little icons */
-    font-size: 0.5em;
     /* no much choice because the way FA icons are inserted */
     padding-top: 0.1lh;
     min-height: 0.8lh;
