--- a/client/components/boards/boardsList.css
+++ b/client/components/boards/boardsList.css
@@ -11,15 +11,12 @@
 /* Two-column layout for All Boards */
 .boards-layout {
   display: grid;
-  gap: 1ch;
+  gap: var(--space-xs-s);
+  padding: var(--space-2xs-xs);
   /* menu takes the space it needs, boards has the rest */
   grid-template-columns: minmax(max-content, 250px) 1fr;
   justify-content: stretch;
   align-items: stretch;
-}
-
-body:not(.mobile-mode) .boards-layout {
-  padding: 1vmax;
 }
 
 body.mobile-mode .boards-layout {
@@ -80,10 +77,7 @@ body.mobile-mode .boards-layout {
 .boards-right-grid {
   display: flex;
   flex-direction: column;
-  gap: 1vmax;
-  /* hackish way to make the item grow only when wrapping, i.e. with no
-  other competing item on the cross axis */
-  flex: 10 1 0;
+  gap: var(--space-s);
 }
 
 .workspaces-header {
@@ -91,8 +85,7 @@ body.mobile-mode .boards-layout {
   align-items: center;
   justify-content: space-between;
   font-weight: bold;
-  padding: 0.3lh 0.8ch;
-  gap: 0.3lh;
+  padding: var(--space-2xs);
 }
 .workspaces-header .js-add-space {
   text-decoration: none;
@@ -211,6 +204,7 @@ body.mobile-mode .boards-layout {
   font-weight: 500;
   min-height: 2lh;
   justify-content: center;
+  padding-inline: var(--space-xs);
 
   .path-left {
     display: flex;
@@ -331,9 +325,9 @@ body.mobile-mode .boards-layout {
 
 .board-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(30ch, 1fr));
-  grid-auto-rows: 7lh;
-  gap: 0.5lh 0.5lh;
+  grid-template-columns: repeat(auto-fill, minmax(15ch, 25ch));
+  grid-auto-rows: 5lh;
+  gap: var(--space-2xs-xs);
   align-items: start;
 }
 
@@ -402,7 +396,7 @@ body.mobile-mode .boards-layout {
     text-align: center;
     justify-content: center;
     align-items: center;
-    gap: 1ch;
+    gap: var(--space-2xs);
     flex: 1;
     padding: 0 1ch;
   }
