--- a/client/components/cards/labels.css
+++ b/client/components/cards/labels.css
@@ -1,4 +1,4 @@
-.card-label {
+.card-label:not(.palette-color) {
   border-radius: 0.4ch;
   color: #fff;
   display: inline-block;
@@ -15,13 +15,16 @@
   padding: 0 0.5ch;
   height: var(--label-height);
   min-width: 8ch;
+  border: 0.1em solid black;
 }
 .card-label:hover {
   color: #fff;
 }
-.card-label.square {
-  height: 30px;
-  width: 30px;
+.card-label.square, .minicard-label {
+  height: 0.75lh;
+  aspect-ratio: 1/1;
+  outline: 0.15ch solid black;
+  border-radius: 0.3ch;
   padding: 0;
 }
 .card-label.add-label {
