--- a/client/components/users/userForm.css
+++ b/client/components/users/userForm.css
@@ -2,25 +2,26 @@
   display: grid;
   align-content: stretch;
   align-items: stretch;
-  justify-items: stretch;
-  justify-content: center;
+  justify-items: center;
+  justify-content: stretch;
   padding: 2lh 0;
   /* i.e. center horizontally */
   margin-inline: auto;;
   /* parent container has relative positionning */
   grid-template-columns: 100%;
-  grid-template-rows: minmax(20vh, 300px) min-content 1fr;
+  grid-template-rows: 1fr auto auto;
+  max-width: clamp(20.625rem, 17.5862rem + 13.5057cqi, 50rem);
   position: relative;
 }
 
 body.mobile-mode:has(.auth-container) {
   .auth-container {
     grid-template-columns: 90vw;
-    min-height: 100%;
   }
 }
 
 .auth-logo {
+  min-width: 80%;
   &, &>a:not(img), > img {
     display: flex;
     flex: 1;
@@ -46,12 +47,10 @@ body.mobile-mode:has(.auth-container) {
 
 .auth-layout .auth-dialog {
   background: #fff;
-  font-size: 1.1em;
   border-radius: 0.4vw;
   border: 1px solid #dbdbdb;
   border-bottom-color: #c2c2c2;
   box-shadow: 0 0.2vh 0.8vh rgba(0,0,0,0.3);
-  padding: 0 2ch 0.5lh 2ch;
   white-space: wrap;
   /* try to override properties of non-flex forms
   without referring too much to classes and ids, as forms
@@ -98,7 +97,6 @@ body.mobile-mode {
 .auth-layout .auth-dialog .at-form button {
   background: #216694;
   color: #fff;
-  min-height: 2lh;
 }
 .auth-layout .auth-dialog .at-form .at-title {
   border-bottom: 1px solid #dcdcdc;
