--- a/client/components/main/header.jade
+++ b/client/components/main/header.jade
@@ -42,15 +42,13 @@ template(name="header")
                     = title
             else
               li.current.empty(title="{{_ 'quick-access-description'}}")
-              | {{_ 'quick-access-description'}}
-          #header-new-board-icon
-        // Next line is used only for spacing at header,
-        // there is no visible clickable icon.
-        #header-new-board-icon
+                +viewer
+                  | {{_ 'quick-access-description'}}
         //  Hide duplicate create board button,
         //  because it did not show board templates correctly.
-        //a#header-new-board-icon.js-create-board
-        //  i.fa.fa-plus(title="Create a new board")
+        // #FIXME it seems to me like it works now
+        a#header-new-board-icon.js-create-board
+          i.fa.fa-plus(title="Create a new board")
       // Logo - visible; on mobile constrained by CSS
       unless currentSetting.hideLogo
         .logo-container
