Minor tweaks on some popup/form elements and sim.

--- a/client/components/cards/cardDate.jade
+++ b/client/components/cards/cardDate.jade
@@ -107,7 +107,7 @@ template(name="editCardReceivedDatePopup")
       if error.get
         .warning {{_ error.get}}
       button.primary.wide.left.js-submit-date(type="submit") {{_ 'save'}}
-      button.js-delete-date.negate.wide.right.js-delete-date {{_ 'delete'}}
+      button.js-delete-date.negate.wide.right.js-delete-date {{_ 'cancel'}}
 
 template(name="editCardStartDatePopup")
   .datepicker-container
