--- a/client/components/cards/subtasks.jade
+++ b/client/components/cards/subtasks.jade
@@ -46,6 +46,7 @@ template(name="addSubtaskItemForm")
   .edit-controls.clearfix
     button.primary.confirm.js-submit-add-subtask-item-form(type="submit") {{_ 'save'}}
     a.js-close-inlined-form
+      i.fa.fa-times-thin
 
 template(name="editSubtaskItemForm")
   textarea.js-edit-subtask-item(rows='1' dir="auto")
