--- a/client/components/sidebar/sidebar.jade
+++ b/client/components/sidebar/sidebar.jade
@@ -681,7 +681,7 @@ template(name="labelsWidget")
               +viewer
                 = name
       if currentUser.isBoardAdmin
-        a.card-label.add-label.js-add-label(title="{{_ 'label-create'}}")
+        a.rounded-fa-button.js-add-label(title="{{_ 'label-create'}}")
           i.fa.fa-plus
 
 template(name="memberPopup")
