--- a/client/components/users/passwordInput.jade
+++ b/client/components/users/passwordInput.jade
@@ -3,7 +3,7 @@ template(name='passwordInput')
     label(for='at-field-{{_id}}') {{displayName}}
     .password-input-container
       input.password-field(type="{{type}}" placeholder="{{displayName}}" autocomplete="{{autocomplete}}" required="{{required}}")
-      button.password-toggle-btn(type="button" tabindex="-1" aria-label="Toggle password visibility" title="Toggle password visibility")
+      button.password-toggle-btn.primary(type="button" tabindex="-1" aria-label="Toggle password visibility" title="Toggle password visibility")
         i.fa.fa-eye.eye-icon
         i.fa.fa-eye-slash.eye-slash-icon
     if errs
