--- a/client/components/cards/labels.jade
+++ b/client/components/cards/labels.jade
@@ -37,4 +37,4 @@ template(name="cardLabelsPopup")
               = name
             if(isLabelSelected ../_id)
               i.card-label-selectable-icon.fa.fa-check
-  a.quiet-button.full.js-add-label {{_ 'label-create'}}
+  a.emphasis-button.full.js-add-label {{_ 'label-create'}}
