--- a/client/components/forms/forms.css
+++ b/client/components/forms/forms.css
@@ -1,7 +1,3 @@
-select, button, input {
-  font-size: 1rem !important;
-}
-
 form {
   /* 🛑 remove me if it causes a significant issue.
   this can be overidden and otherwise allow forms to
@@ -21,13 +17,11 @@ button {
   border-radius: 0.4vw;
   display: block;
   padding: 0.3lh 1ch;
-  max-width: clamp(30vw, 100%, 800px);
 }
-select.full,
-textarea.full,
-input:not([type=file]).full,
-button.full {
-  width: 100%;
+body.mobile-mode {
+  select, textarea, input, button {
+    max-width: unset;
+  }
 }
 select.input-error,
 textarea.input-error,
@@ -126,19 +120,14 @@ button {
   background: linear-gradient(#000, #000);
   border: none;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 700;
   line-height: 1.3;
-  /* in flex layouts, padding often disturbs computations. rather rarely have
-  two lines, so setting relative-unit min-height works better */
-  min-height: 1.8lh;
-  padding: 0 2ch;
   text-align: center;
   color: #fff;
   z-index: 1;
-  :not(.password-toggle-btn) {
-    margin-top: 0.1lh;
-  }
 }
 input[type="submit"] .wide,
 button .wide {
@@ -170,7 +159,7 @@ button:active:active {
   background: linear-gradient(#e6e6e6, #e6e6e6);
 }
 input[type="submit"].primary,
-button.primary {
+button.primary, button.at-btn.submit {
   background: #005377;
   box-shadow: 0 1px 0 #4d4d4d;
   color: #fff;
@@ -190,6 +179,7 @@ button.negate {
   background: #eb5a46;
   box-shadow: 0 1px 0 #4d4d4d;
   color: #fff;
+  border-radius: 0.6ch;
 }
 input[type="submit"].negate:hover,
 button.negate:hover,
@@ -205,10 +195,6 @@ button.negate:active {
   background: #7d0c0c;
   box-shadow: 0 1px 0 #4d4d4d;
   color: #fff;
-}
-input[type="submit"] i.fa,
-button i.fa {
-  margin-right: 10px;
 }
 input[type="submit"].disabled,
 input[type="submit"]:disabled,
@@ -325,7 +311,7 @@ textarea::-moz-placeholder {
 }
 .materialCheckBox {
   position: relative;
-  width: 0.5lh;
+  aspect-ratio: 1/1;
   height: 0.5lh;
   z-index: 0;
   border: 0.2ch solid #5a5a5a;
@@ -335,23 +321,12 @@ textarea::-moz-placeholder {
   margin-left: 0px;
   cursor: pointer;
 }
-.materialCheckBox:is(.active) {
-  position: relative;
-  width: 13px;
-  height: 13px;
-  z-index: 0;
-  border: 2px solid #5a5a5a;
-  border-radius: 1px;
-  transition: 0.2s;
-  margin: 0;
-  cursor: pointer;
-}
 .materialCheckBox.is-checked {
   top: 0.3lh;
   left: 0.25lh;
   width: 0.25lh;
   height: 0.5lh;
-  margin-right: 0.6lh;
+  margin-right: 0.3ch;
   border-top: 0 solid transparent;
   border-left: 0 solid transparent;
   border-bottom: 0.3ch solid #3cb500;
@@ -572,10 +547,9 @@ button.loud-text-button:hover {
    -webkit-user-select: none;
   user-select: none;
     color: #222;
-  display: block;
-  margin: 2px 0;
-  padding: 6px 8px;
+  display: flex;
   position: relative;
+  justify-content: center;
 }
 .emphasis-button.w-img,
 .quiet-button.w-img {
