--- a/client/components/main/layouts.jade
+++ b/client/components/main/layouts.jade
@@ -45,7 +45,7 @@ template(name="userFormsLayout")
           +viewer
             | {{currentSetting.textBelowCustomLoginLogo}}
     section.auth-layout.auth-form
-      section.auth-dialog
+      section.auth-dialog.pad
         if isLoading
           +loader
         else
